# ZTP

./: .gitignore
lab_1/: README.md  main.py  pyproject.toml
lab_1/features/: test1.feature
lab_1/features/steps/: test1.py
lab_1/src/lab_1/: models.py  schemas.py
lab_1/src/lab_1/repositories/: product_repository.py  user_repository.py
lab_1/src/lab_1/routers/: banned_phrases.py  products.py  users.py
lab_1/src/lab_1/services/: banned_phrase_service.py  product_service.py  user_service.py
lab_2/: Dockerfile  README.md  celery_config.py  docker-compose.yaml  init_db.py  main.py  notifier.py  push_dashboard.html  pyproject.toml  subscriber.py  test_notifications.py
lab_2/src/: models.py  schemas.py
lab_2/src/notifier/: __init__.py  tasks.py
lab_2/src/notifier/delivery/: __init__.py  email.py  push.py
lab_2/src/repositories/: notification_repository.py
lab_2/src/routers/: notification_router.py  stream_router.py  user_router.py
lab_2/src/services/: notification_service.py
lab_3/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
lab_3/app/: main.py  main_integrated.py  products_mock.py  products_service.py
lab_3/app/api/v1/: cart.py  cart_integrated.py
lab_3/app/application/cart/: add_item.py  add_item_integrated.py  checkout.py  checkout_integrated.py  create_cart.py  expiration_task.py  remove_item.py  remove_item_integrated.py  view_cart.py
lab_3/app/domain/cart/: aggregate.py  (+2 more)
lab_3/app/infrastructure/: database.py  database_products.py
lab_3/app/templates/: cart.html  index.html
lab_3/db/: docker-compose.yml
lab_3/tests/: test_cart_aggregate.py  test_product_aggregate.py
(+8 files in other folders)
